# AIP

./: README.md  pyproject.toml  обновление даты  скрипт бд
csv/: group_st  prepod  result_of_midterm  semester
website/: api.py
website/csv/: discipline  discipline.csv  group_st.csv  kafedra  kafedra.csv  prepod.csv  result_of_midterms.csv  semester.csv  student  student.csv
website/portal/: admin.py  models.py
website/portal/migrations/: 0001_initial.py
website/website/: connect.py  creationdb.py  settings.py  uploadcsv.py  urls.py
