[tool.poetry]
name = "studbase"
version = "0.1.0"
description = ""
authors = ["David <42513699+David1105@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
