[tool.poetry]
name = "studbase"
version = "0.1.0"
description = ""
authors = [" "]

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "^3.1.2"
pip = "^20.2.4"
SQLAlchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
